--- a/views/product-list.ejs
+++ b/views/product-list.ejs
@@ -12,7 +12,7 @@
         <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="row justify-content-md-center">
                 <div class="col-md-auto">
-                    <a class="navbar-brand" href="#">Lista Ordini</a>
+                    <a class="navbar-brand" href="#">Lista Prodotti</a>
                 </div>
                 <div class="col-md-auto">
                     <button class="btn-primary bg-transparent text-primary border-0 align-bottom" type="button"
