fix esposizione residuo contratto

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -58,9 +58,9 @@
 			<h4>Cliente: <%= client.ccod %>
 				<small class="text-muted"><%= client.xragsoc %></small>
 			</h4>
-			<% if (ordCtv != 0){%>
+			<% if (ordCtv.sumctv != 0){%>
 			<h4>Residuo contratto: 
-				<small class="text-muted"><%= ordCtv %></small>
+				<small class="text-muted"><%= ordCtv.sumctv %></small>
 			</h4>
 			<% } %>
 		</div>
