--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -78,6 +78,10 @@
         </div>
         <div class="form-row">
             <div class="form-group col">
+                <label>Codice SDI</label>
+                <input type="text" class="form-control" name="xnome" maxlength="7" minlength="7" value="<%= csdi %>">
+            </div>
+            <div class="form-group col">
                 <label>Nome</label>
                 <input type="text" class="form-control" name="xnome" maxlength="15" value="<%= xnome %>">
             </div>
