--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -123,7 +123,7 @@
 					<td></td>
 					<td></td>
 					<td></td>
-					<th scope="col"><%= itot.toFixed(2) %></th>
+					<th scope="col"><%= (+itot - (+itot/100*client.psco)).toFixed(2) %></th>
 				</tr>
 				</tfoot>
 			</table>
