--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -79,12 +79,12 @@
             </div>
         </div>
         <div class="form-row">
-            <div class="form-group col">
+            <div class="form-group col-md-auto">
                 <label>Codice SDI</label>
                 <input type="text" class="form-control" name="xnome" maxlength="7" minlength="7" value="<%= csdi %>"
                         <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
-            <div class="form-group col">
+            <div class="form-group col-md">
                 <label>Nome e Cognome</label>
                 <input type="text" class="form-control" name="xcli" maxlength="60" value="<%= xcli %>"
                         <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
