--- a/views/detail-client.ejs
+++ b/views/detail-client.ejs
@@ -81,7 +81,7 @@
         <div class="form-row">
             <div class="form-group col-md-auto">
                 <label>Codice SDI</label>
-                <input type="text" class="form-control" name="xnome" maxlength="7" minlength="7" value="<%= csdi %>"
+                <input type="text" class="form-control" name="csdi" maxlength="7" minlength="7" value="<%= csdi %>"
                         <%- (cazi && cazi === 'var') ? '' : 'readonly' %>>
             </div>
             <div class="form-group col-md">
