--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -79,7 +79,7 @@
         <div class="form-row">
             <div class="form-group col">
                 <label>Codice SDI</label>
-                <input type="text" class="form-control" name="xnome" maxlength="7" minlength="7" value="<%= csdi %>">
+                <input type="text" class="form-control" name="csdi" maxlength="7" minlength="7" value="<%= csdi %>">
             </div>
             <div class="form-group col">
                 <label>Nome</label>
