--- a/views/new-client.ejs
+++ b/views/new-client.ejs
@@ -131,7 +131,7 @@
             <% if (user.cage === 9999 || user.cage == 0) { %>
             <div class="form-group col">
                 <label>Agente</label>
-                <input type="number" class="form-control" name="cage" maxlength="5" required>
+                <input type="number" class="form-control" name="cage" maxlength="5" value="<%= cage %>" required>
             </div>
             <div class="form-group col">
                 <label>Tipo commerciale</label>
