--- a/views/order-list.ejs
+++ b/views/order-list.ejs
@@ -3,192 +3,188 @@
 <html lang="it">
 
 <head>
-    <title>Portale Innovazioni - Lista ordini</title>
-    <!--<link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-          integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <link rel="stylesheet" href="/material-design-icons/iconfont/material-icons.css">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-            integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-            crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">-->
-    <% include head %>
+	<title>Portale Innovazioni - Lista ordini</title>
+	<!--<link rel="manifest" href="/manifest.json">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+		  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<link rel="stylesheet" href="/material-design-icons/iconfont/material-icons.css">
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+			integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+			crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+			integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+			crossorigin="anonymous"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+			crossorigin="anonymous"></script>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
+	<% include head %>
 </head>
 
 <body>
-    <div class="sticky-top">
-        <nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
-            <div class="row justify-content-md-center">
-                <div class="col-md-auto">
-                    <a class="navbar-brand" href="#">Lista Ordini</a>
-                </div>
-                <div class="col-md-auto">
-                    <button class="btn-primary bg-transparent text-primary border-0 align-bottom" type="button" data-toggle="collapse"
-                        data-target="#filterForm" aria-expanded="false" aria-controls="filterForm">
-                        <i class="material-icons">&#xe152</i>
-                    </button>
-                </div>
-                <div class="col-md-auto">
-                    <div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
-                        <div class="col-md-auto">
-                            <ul class="navbar-nav mr-auto">
-                                <li class="nav-item dropdown">
-                                    <a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
-                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                        Azioni
-                                    </a>
-                                    <ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
-                                        <li><a class="dropdown-item" href="/home">Home</a></li>
-                                    </ul>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row justify-content-md-center">
-                <div class="collapse" id="filterForm">
-                    <form action="/order-list" method="post" class="form-inline">
-                        <div class="form-row align-items-center">
-                            <div class="col-auto">
-                                <label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
-                                <input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
-                                    placeholder="Ragione sociale">
-                            </div>
-                            <% if (user.cage === 9999 || user.cage === 0) { %>
-                            <div class="col-auto">
-                                <label class="sr-only" for="inlineFormCage">Codice agente</label>
-                                <input type="text" name="cageric" class="form-control mb-2" id="inlineFormInputCage"
-                                    placeholder="Codice agente">
-                            </div>
-                            <% } %>
-                            <div class="col-auto">
-                                <label class="nav-link" for="inlineFormCage">Visualizza storico</label>
-                                <input type="checkbox" name="fall" id="inlineFormInputCage">
-                            </div>
-                        </div>
-                        <div class="col-auto">
-                            <button type="submit" class="btn btn-primary mb-2">Cerca</button>
-                        </div>
-                </div>
-                </form>
-            </div>
-        </nav>
-    </div>
-    <div class="container-fluid">
-        <!-- show any messages that come back with authentication -->
-        <% if (message.length > 0) { %>
-        <div class="alert alert-danger">
-            <%= message %>
-        </div>
-        <% } %>
-        <div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
-            <div id="client">
-                <table class="table table-hover">
-                    <thead>
-                        <tr>
-                            <th scope="col">Codice Ordine</th>
-                            <th scope="col">Cliente</th>
-                            <th scope="col">Importo</th>
-                            <th scope="col">Data</th>
-                            <th></th>
-                            <th></th>
-                            <th></th>
-                            <% if (user.cage == 9999 || user.cage == 0) { %>
-                            <th></th>
-                            <% } %>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <% orders.forEach(function(order) { %>
-                        <tr<%- (order.cstt==50) ? ' class="table-success"' : '' %>>
-                            <th scope="row">
-                                <%= order.ccod %>
-                            </th>
-                            <td>
-                                <%= order.xragsoc %>
-                            </td>
-                            <td>
-                                <%= order.iimp %>
-                            </td>
-                            <td>
-                                <%= order.data %>
-                            </td>
-                            <td>
-                                <button class="btn btn-link" data-toggle="modal" data-target="#noteModal<%= order.ccod %>"
-                                    <%- (order.xnota !='' ) ? '' : 'disabled' %>>
-                                    <i class="material-icons">&#x<%- (order.xnota != '') ? 'e8cd' : 'e92a' %></i>
-                                </button>
-                                <div class="modal fade" id="noteModal<%= order.ccod %>" tabindex="-1" role="dialog"
-                                    aria-labelledby="noteModal" aria-hidden="true">
-                                    <div class="modal-dialog" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="noteModalTitle<%= order.ccod %>">Note
-                                                    dell'ordine</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-                                            <div class="modal-body">
-                                                <textarea class="form-control" name="xnote<%= order.ccod %>" maxlength="1000"
-                                                    spellcheck="false" readonly><%= order.xnota %></textarea>
-                                            </div>
-                                            <div class="modal-footer">
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </td>
-                            <td>
-                                <% if (order.cstt == 10 || user.cage == 9999 || user.cage == 0) { %>
-                                <form action="/new-order-sum" method="get">
-                                    <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
-                                </form>
-                                <% } else {%>
-                                <form action="#" method="get">
-                                    <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                                    <button type="submit" class="btn btn-link" disabled><i class="material-icons">&#xe254</i></button>
-                                </form>
-                                <% } %>
-                            </td>
-                            <td>
-                                <% if (order.cstt != 50  || user.cage == 9999 || user.cage == 0) { %>
-                                <form action="/del-order" method="post">
-                                    <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe872</i></button>
-                                </form>
-                                <% } else { %>
-                                <form action="/del-order" method="post">
-                                    <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                                    <button type="submit" class="btn btn-link" disabled><i class="material-icons">&#xe872</i></button>
-                                </form>
-                                <% } %>
-                            </td>
-                            <% if (user.cage == 9999 || user.cage == 0) { %>
-                            <td>
-                                <form action="/get-csv" method="get">
-                                    <input type="hidden" name="ccod" value="<%= order.ccod %>">
-                                    <button type="submit" class="btn btn-link"><i class="material-icons">&#xe2c4</i></button>
-                                </form>
-                            </td>
-                            <% } %>
-                            </tr>
-                            <% }); %>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+<div class="sticky-top">
+	<nav id="navbar-ordine" class="navbar navbar-expand-lg navbar-light bg-light">
+		<div class="row justify-content-md-center">
+			<div class="col-md-auto">
+				<a class="navbar-brand" href="#">Lista Ordini</a>
+			</div>
+			<div class="col-md-auto">
+				<button class="btn-primary bg-transparent text-primary border-0 align-bottom" type="button"
+						data-toggle="collapse"
+						data-target="#filterForm" aria-expanded="false" aria-controls="filterForm">
+					<i class="material-icons">&#xe152</i>
+				</button>
+			</div>
+			<div class="col-md-auto">
+				<div class="row justify-content-md-center navbar-collapse" id="navbarSupportedContent">
+					<div class="col-md-auto">
+						<ul class="navbar-nav mr-auto">
+							<li class="nav-item dropdown">
+								<a class="nav-link dropdown-toggle" href="#" id="dropdownAzioni" role="button"
+								   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+									Azioni
+								</a>
+								<ul class="dropdown-menu" aria-labelledby="dropdownAzioni">
+									<li><a class="dropdown-item" href="/home">Home</a></li>
+								</ul>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row justify-content-md-center">
+			<div class="collapse" id="filterForm">
+				<form action="/order-list" method="post" class="form-inline">
+					<div class="form-row align-items-center">
+						<div class="col-auto">
+							<label class="sr-only" for="inlineFormRagSoc">Ragione sociale</label>
+							<input type="text" name="xragsoc" class="form-control mb-2" id="inlineFormInputRagSoc"
+								   placeholder="Ragione sociale">
+						</div>
+						<% if (user.cage === 9999 || user.cage === 0) { %>
+						<div class="col-auto">
+							<label class="sr-only" for="inlineFormCage">Codice agente</label>
+							<input type="text" name="cageric" class="form-control mb-2" id="inlineFormInputCage"
+								   placeholder="Codice agente">
+						</div>
+						<% } %>
+						<div class="col-auto">
+							<label class="nav-link" for="inlineFormCage">Visualizza storico</label>
+							<input type="checkbox" name="fall" id="inlineFormInputCage">
+						</div>
+					</div>
+					<div class="col-auto">
+						<button type="submit" class="btn btn-primary mb-2">Cerca</button>
+					</div>
+			</div>
+			</form>
+		</div>
+	</nav>
+</div>
+<div class="container-fluid">
+	<!-- show any messages that come back with authentication -->
+	<% if (message.length > 0) { %>
+	<div class="alert alert-danger">
+		<%= message %>
+	</div>
+	<% } %>
+	<div data-spy="scroll" data-target="#navbar-ordine" data-offset="0">
+		<div id="client">
+			<table class="table table-hover">
+				<thead>
+				<tr>
+					<th scope="col">Codice Ordine</th>
+					<th scope="col">Cliente</th>
+					<th scope="col">Importo</th>
+					<th scope="col">Data</th>
+					<th></th>
+					<th></th>
+					<th></th>
+					<% if (user.cage == 9999 || user.cage == 0) { %>
+					<th></th>
+					<% } %>
+				</tr>
+				</thead>
+				<tbody>
+				<% orders.forEach(function(order) { %>
+				<tr<%- (order.cstt == 50) ? ' class="table-success"' : '' %>>
+					<th scope="row"><%= order.ccod %></th>
+					<td><%= order.xragsoc %></td>
+					<td><%= order.iimp %></td>
+					<td><%= order.data %></td>
+					<td>
+						<button class="btn btn-link" data-toggle="modal" data-target="#noteModal<%= order.ccod %>"
+								<%- (order.xnota != '') ? '' : 'disabled' %>>
+							<i class="material-icons">&#x<%- (order.xnota != '') ? 'e8cd' : 'e92a' %></i>
+						</button>
+						<div class="modal fade" id="noteModal<%= order.ccod %>" tabindex="-1" role="dialog"
+							 aria-labelledby="noteModal" aria-hidden="true">
+							<div class="modal-dialog" role="document">
+								<div class="modal-content">
+									<div class="modal-header">
+										<h5 class="modal-title" id="noteModalTitle<%= order.ccod %>">Note
+											dell'ordine</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+									</div>
+									<div class="modal-body">
+                                                <textarea class="form-control" name="xnote<%= order.ccod %>"
+														  maxlength="1000"
+														  spellcheck="false" readonly><%= order.xnota %></textarea>
+									</div>
+									<div class="modal-footer">
+										<button type="button" class="btn btn-secondary" data-dismiss="modal">Close
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</td>
+					<td>
+						<% if (order.cstt == 10 || user.cage == 9999 || user.cage == 0) { %>
+						<form action="/new-order-sum" method="get">
+							<input type="hidden" name="ccod" value="<%= order.ccod %>">
+							<button type="submit" class="btn btn-link"><i class="material-icons">&#xe254</i></button>
+						</form>
+						<% } else { %>
+						<form action="#" method="get">
+							<input type="hidden" name="ccod" value="<%= order.ccod %>">
+							<button type="submit" class="btn btn-link" disabled><i class="material-icons">&#xe254</i>
+							</button>
+						</form>
+						<% } %>
+					</td>
+					<td>
+						<% if (order.cstt != 50 || user.cage == 9999 || user.cage == 0) { %>
+						<form action="/del-order" method="post">
+							<input type="hidden" name="ccod" value="<%= order.ccod %>">
+							<button type="submit" class="btn btn-link"><i class="material-icons">&#xe872</i></button>
+						</form>
+						<% } else { %>
+						<form action="/del-order" method="post">
+							<input type="hidden" name="ccod" value="<%= order.ccod %>">
+							<button type="submit" class="btn btn-link" disabled><i class="material-icons">&#xe872</i>
+							</button>
+						</form>
+						<% } %>
+					</td>
+					<% if (user.cage == 9999 || user.cage == 0) { %>
+					<td>
+						<form action="/get-csv" method="get">
+							<input type="hidden" name="ccod" value="<%= order.ccod %>">
+							<button type="submit" class="btn btn-link"><i class="material-icons">&#xe2c4</i></button>
+						</form>
+					</td>
+					<% } %>
+				</tr>
+				<% }); %>
+				</tbody>
+			</table>
+		</div>
+	</div>
+</div>
 </body>
 
 </html>
