config nas server

--- a/views/new-order-sum.ejs
+++ b/views/new-order-sum.ejs
@@ -137,7 +137,7 @@
 			<div class="col">
 				<form action="/req-pdf-order" method="get">
 					<input type="hidden" name="idOrd" value="<%= idOrd %>">
-					<button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom">
+					<button type="submit" class="btn-primary bg-transparent text-primary border-0 align-bottom" disabled>
 						<i class="material-icons">&#xe415</i> Salva
 					</button>
 				</form>
